[package]
name = "mosaic"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
anyhow = "1.0.98"
subprocess = "0.2.9"
reqwest = "0.12.22"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.142"